feat: add custom logging
This is for task 3 day 4

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,9 +25,12 @@ server.ssl.key-alias=secure-key
 server.http.port=9090
 
 ##logging
-#logging.level.org.springframework.web=INFO
-#logging.file.name=logs/app.log
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+logging.level.com.training_microservice=INFO
+logging.file.name=logs/app.log
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
-logging.level.org.springframework.security=DEBUG
+
 
 
