--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ ext {
 
 dependencies {
 
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+
 //  JPA and MySQL
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'com.mysql:mysql-connector-j'
@@ -50,13 +52,14 @@ dependencies {
 //	Feign Client
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
-//	Logging
-	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-logging', version: '3.3.3'
+//	Logging and Actuators
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.boot:spring-boot-starter-logging'
 
 //	Validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+//	Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
