--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,13 +24,16 @@ server.ssl.key-alias=secure-key
 # Redirect HTTP to HTTPS
 server.http.port=9090
 
-##logging
+#logging
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 logging.level.com.training_microservice=INFO
 logging.file.name=logs/app.log
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
+#actuator
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=always
 
 
 
