--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=microservice_api
 server.port=8081
 
 #Connection to DB
-spring.datasource.url=jdbc:mysql://localhost:3306/microservice
+spring.datasource.url=jdbc:mysql://mydb:3306/microservice
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=strong_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate JPA
